# hogent_nba

./: README.md  create_sqlite_db.py  pyproject.toml
mock_db/: client_employees.json  client_products.json  clients.json  invoices.json  schema.md
schemas/: nba_calculation_event.schema.json
src/nba_backend/: __init__.py  logging_config.py  main.py
src/nba_backend/adapters/inmemory/: repositories.py
src/nba_backend/adapters/queue/: inmemory_queue.py
src/nba_backend/api/: dependencies.py  routes.py
src/nba_backend/application/: schemas.py  services.py
src/nba_backend/domain/: models.py
src/nba_backend/ports/: repositories.py
src/nba_calculator/: __init__.py  event_sync_logic.ipynb  event_sync_logic_solution.ipynb  income_optimizer_nba.ipynb  income_optimizer_nba_bis.ipynb  income_optimizer_nba_solution.ipynb  late_payment_nba.ipynb  late_payment_nba_solution.ipynb  union_needed_nba.ipynb  union_needed_nba_solution.ipynb  utils.py
